made ui improvement

--- a/app/src/main/res/layout/fragment_motorcycle_detail.xml
+++ b/app/src/main/res/layout/fragment_motorcycle_detail.xml
@@ -43,62 +43,111 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <ImageView
-                    android:id="@+id/detail_motorcycle_image_view"
-                    android:src="@drawable/baseline_motorcycle_24"
-                    android:layout_width="@dimen/motorcycle_image"
-                    android:layout_height="@dimen/motorcycle_image"
-                    android:padding="@dimen/card_image_padding"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/constraintLayout7"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/Motorcycle"/>
+                    app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="@+id/detail_motorcycle_image_view"
-                    android:layout_height="@dimen/motorcycle_image"
-                    app:layout_constraintStart_toEndOf="@+id/detail_motorcycle_image_view"
-                    app:layout_constraintBottom_toBottomOf="@+id/detail_motorcycle_image_view"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/constraintLayout">
-
-                <EditText
-                        android:id="@+id/motorcycle_title_text_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:inputType="text"
-                        android:textSize="@dimen/motorcycle_title_text"
-                        android:textColor="@color/dark_text"
-                        android:textColorHint="@color/dark_text"
-                        android:hint="@string/detail_title"
-                        android:autofillHints="@string/detail_title_fill"
-
+                <ImageView
+                        android:id="@+id/detail_motorcycle_image_view"
+                        android:src="@drawable/baseline_motorcycle_24"
+                        android:background="@drawable/shape_circle_style"
+                        android:layout_width="@dimen/motorcycle_image"
+                        android:layout_height="@dimen/motorcycle_image"
+                        android:contentDescription="@string/image_description"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-
-                        android:layout_marginTop="@dimen/motorcycle_title_to_top"
-                        android:layout_marginStart="@dimen/motorcycle_title_margin_sx"
-                        android:layout_marginEnd="@dimen/motorcycle_title_margin_sx"
-                        android:minHeight="48dp"/>
-                <EditText
-                        android:id="@+id/motorcycle_description_text_view"
+                        android:layout_marginTop="@dimen/motorcycle_image_to_top"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:textColor="@color/dark_text"
-                        android:textColorHint="@color/dark_text"
-                        android:textSize="@dimen/motorcycle_text"
-                        android:hint="@string/detail_description"
-                        app:layout_constraintTop_toBottomOf="@+id/motorcycle_title_text_view"
-                        android:layout_marginTop="@dimen/motorcycle_title_margin_sx"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_motorcycle_image_view"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="@dimen/motorcycle_text_margin"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginEnd="@dimen/motorcycle_title_margin_sx"
-                        android:autofillHints="@string/detail_description_fill"
-                        android:minHeight="48dp"/>
+                        android:layout_marginTop="@dimen/motorcycle_lines_spacing">
+
+                    <TextView
+                            android:id="@+id/textView8"
+                            android:text="@string/detail_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            style="@style/TextViewStyle"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:layout_marginStart="@dimen/motorcycle_text_margin_width"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" android:id="@+id/constraintLayout9"
+                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginStart="@dimen/motorcycle_interval_width">
+
+                        <EditText
+                                android:id="@+id/detail_motorcycle_title_view"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="text"
+                                android:hint="@string/detail_title"
+                                android:autofillHints="@string/detail_title"
+                                style="@style/TextViewStyle"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                android:layout_marginEnd="@dimen/motorcycle_text_margin_width"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="@dimen/motorcycle_lines_spacing">
+
+                    <TextView
+                            android:id="@+id/textView9"
+                            android:text="@string/detail_description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            style="@style/TextViewStyle"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:layout_marginStart="@dimen/motorcycle_text_margin_width"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/constraintLayout10"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:layout_marginStart="@dimen/motorcycle_interval_width">
+
+                        <EditText
+                                android:id="@+id/motorcycle_description_text_view"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="text"
+                                android:hint="@string/detail_description"
+                                android:autofillHints="@string/detail_description"
+                                style="@style/TextViewStyle"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:layout_marginEnd="@dimen/motorcycle_text_margin_width"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -107,8 +156,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="@dimen/motorcycle_image">
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">
 
                 <RelativeLayout
                         android:layout_width="match_parent"
@@ -116,7 +164,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:id="@+id/constraintLayout2">
+                        android:id="@+id/constraintLayout2" android:layout_marginTop="@dimen/motorcycle_lines_spacing">
 
                     <androidx.recyclerview.widget.RecyclerView
                             android:layout_width="match_parent"
