--- a/app/src/main/res/layout/motorcycle_detail_list_menu.xml
+++ b/app/src/main/res/layout/motorcycle_detail_list_menu.xml
@@ -13,6 +13,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+            android:text="@string/detail_add_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextViewStyle"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/bottomSheetDragHandleView"/>
     <EditText
             android:id="@+id/list_menu_edit_text"
             android:layout_width="match_parent"
