--- a/app/src/main/res/layout/motorclycle_row_recycler_view.xml
+++ b/app/src/main/res/layout/motorclycle_row_recycler_view.xml
@@ -27,6 +27,19 @@
                 android:layout_height="wrap_content">
 
             <ImageView
+                    android:id="@+id/cardMotorcycleCancel"
+                    android:src="@drawable/baseline_trash_delete_fill_24"
+                    app:tint="@color/dark_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="24dp"
+                    android:contentDescription="@string/image_description"
+                    android:visibility="gone"
+            />
+            <ImageView
                     android:id="@+id/cardMotorcycleImageView"
                     android:layout_width="@dimen/card_image"
                     android:layout_height="@dimen/card_image"
