--- a/app/src/main/res/layout/fragment_motorcycle_detail_element.xml
+++ b/app/src/main/res/layout/fragment_motorcycle_detail_element.xml
@@ -7,29 +7,73 @@
                                                    android:background="@color/dark_background"
                                                    tools:context=".fragments.MotorcycleDetailElementFragment"
 >
-        <ImageView
-                android:id="@+id/element_image_view"
-                android:src="@drawable/baseline_construction_24"
-                android:background="@drawable/shape_circle_style"
-                android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintWidth="@dimen/element_image"
-                app:layout_constraintHeight="@dimen/element_image"
-
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="@dimen/element_top_margin"
-                android:contentDescription="@string/image_description"/>
+                android:background="@color/dark_more_background"
+                android:id="@+id/constraintLayout12">
 
+                <ImageView
+                        android:id="@+id/element_back_button"
+                        android:src="@drawable/baseline_arrow_back_24"
+                        android:layout_width="@dimen/fragment_image_dimension"
+                        android:layout_height="@dimen/fragment_image_dimension"
+                        app:tint="@color/dark_text"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:contentDescription="@string/image_description"
+                        android:layout_marginStart="@dimen/fragment_margin"
+                        android:layout_marginBottom="@dimen/fragment_height"
+                        android:layout_marginTop="@dimen/fragment_height"/>
+                <ImageView
+                        android:id="@+id/element_check_save"
+                        android:src="@drawable/baseline_check_24"
+                        android:layout_width="@dimen/fragment_image_dimension"
+                        android:layout_height="@dimen/fragment_image_dimension"
+                        app:tint="@color/dark_text"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="@dimen/fragment_margin"
+                        android:contentDescription="@string/image_description"
+                        android:visibility="visible"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout13"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout12">
+
+                <ImageView
+                        android:id="@+id/element_image_view"
+                        android:src="@drawable/baseline_construction_24"
+                        android:background="@drawable/shape_circle_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintWidth="@dimen/element_image"
+                        app:layout_constraintHeight="@dimen/element_image"
+
+                        android:contentDescription="@string/image_description"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="@dimen/element_top_margin"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="@dimen/element_top_margin"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/line_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/element_image_view"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="@dimen/element_top_margin">
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout13">
 
                 <TextView
                         android:id="@+id/textView0"
