--- a/app/src/main/res/layout/fragment_motorcycle_detail.xml
+++ b/app/src/main/res/layout/fragment_motorcycle_detail.xml
@@ -20,6 +20,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
     <ImageView
+            android:id="@+id/floating_detail_image_motorcycle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -42,14 +43,49 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:background="@color/dark_more_background"
+                    android:id="@+id/constraintLayout12">
+
+                <ImageView
+                        android:id="@+id/detail_motorcycle_back_button"
+                        android:src="@drawable/baseline_arrow_back_24"
+                        android:layout_width="@dimen/fragment_image_dimension"
+                        android:layout_height="@dimen/fragment_image_dimension"
+                        app:tint="@color/dark_text"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:contentDescription="@string/image_description"
+                        android:layout_marginStart="@dimen/fragment_margin"
+                        android:layout_marginBottom="@dimen/fragment_height"
+                        android:layout_marginTop="@dimen/fragment_height"/>
+                <ImageView
+                        android:id="@+id/detail_motorcycle_check_save"
+                        android:src="@drawable/baseline_check_24"
+                        android:layout_width="@dimen/fragment_image_dimension"
+                        android:layout_height="@dimen/fragment_image_dimension"
+                        app:tint="@color/dark_text"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="@dimen/fragment_margin"
+                        android:contentDescription="@string/image_description"
+                        android:visibility="gone"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/constraintLayout7"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout12">
 
                 <ImageView
                         android:id="@+id/detail_motorcycle_image_view"
