--- a/app/src/main/res/layout/fragment_motorcycle_detail_element.xml
+++ b/app/src/main/res/layout/fragment_motorcycle_detail_element.xml
@@ -40,7 +40,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginEnd="@dimen/fragment_margin"
                         android:contentDescription="@string/image_description"
-                        android:visibility="visible"/>
+                        android:visibility="gone"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
