--- a/app/src/main/res/layout/motorcycle_detail_element_row_recycler_view.xml
+++ b/app/src/main/res/layout/motorcycle_detail_element_row_recycler_view.xml
@@ -22,6 +22,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <ImageView
+                    android:id="@+id/card_element_delete"
+                    android:src="@drawable/baseline_trash_delete_fill_24"
+                    app:tint="@color/dark_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="24dp"
+                    android:contentDescription="@string/image_description"
+                    android:visibility="gone"
+            />
 
             <ImageView
                     android:id="@+id/card_element_image"
